--- a/Home/index.html
+++ b/Home/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="logo"><a href="index.html">STEAM</a></div>
+    <div class="logo">STEAM</div>
     <nav>
       <ul>
         <li><a href="#">Loja</a></li>
@@ -33,25 +33,24 @@
       <h2>Jogos em Destaque</h2>
       <div class="games-grid">
         <div class="game-card">
-          <a href="jogo1.html">
             <img src="images/jogo1.jpg" alt="Jogo 1" />
             <h3>Fallout 4 VR</h3>
             <p>R$ 49,99</p>
-          </a>
         </div>
         <div class="game-card">
-          <a href="Game_Pages/jogo1.html">
             <img src="images/jogo2.jpg" alt="Jogo 2" />
-            <h3>Jogo 2</h3>
+            <h3>Batman Arkham Asylum</h3>
             <p>R$ 89,90</p>
-          </a>
         </div>
         <div class="game-card">
-          <a href="jogo3.html">
             <img src="images/jogo3.jpg" alt="Jogo 3" />
-            <h3>Jogo 3</h3>
+            <h3>Counter Strike</h3>
             <p>Gratuito</p>
-          </a>
+        </div>
+        <div class="game-card">
+            <img src="images/jogo4.jpg" alt="Jogo 4" />
+            <h3>Revolution Idle</h3>
+            <p>R$ 29,90</p>
         </div>
       </div>
     </section>
